[gd_scene load_steps=5 format=3 uid="uid://g0v1n5jkif13"]

[ext_resource type="PackedScene" uid="uid://c1yq0s6dv87p" path="res://project/Luos/luos.tscn" id="1_553pf"]
[ext_resource type="Script" path="res://project/Level/village.gd" id="1_mic0k"]
[ext_resource type="PackedScene" uid="uid://cr6aql8rvho0w" path="res://project/Dialog/dialog.tscn" id="3_ddpta"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ir2ib"]

[node name="village" type="Node2D"]
script = ExtResource("1_mic0k")

[node name="luos" parent="." instance=ExtResource("1_553pf")]
position = Vector2(512, 448)

[node name="Camera2D" type="Camera2D" parent="luos"]
limit_left = 0

[node name="lilith_area" type="Area2D" parent="."]
position = Vector2(805, 458)

[node name="CollisionShape2D" type="CollisionShape2D" parent="lilith_area"]
shape = SubResource("RectangleShape2D_ir2ib")

[node name="gary_area" type="Area2D" parent="."]
position = Vector2(1186, 458)

[node name="CollisionShape2D" type="CollisionShape2D" parent="gary_area"]
shape = SubResource("RectangleShape2D_ir2ib")

[node name="ina_area" type="Area2D" parent="."]
position = Vector2(1525, 458)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ina_area"]
shape = SubResource("RectangleShape2D_ir2ib")

[node name="shiny_area" type="Area2D" parent="."]
position = Vector2(1807, 460)

[node name="CollisionShape2D" type="CollisionShape2D" parent="shiny_area"]
shape = SubResource("RectangleShape2D_ir2ib")

[node name="ori_area" type="Area2D" parent="."]
position = Vector2(2044, 460)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ori_area"]
shape = SubResource("RectangleShape2D_ir2ib")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialog" parent="CanvasLayer" instance=ExtResource("3_ddpta")]

[node name="dialog_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="positions" type="Node2D" parent="."]

[node name="lilith" type="Marker2D" parent="positions"]
position = Vector2(770, 448)

[node name="gary" type="Marker2D" parent="positions"]
position = Vector2(1145, 448)

[node name="ina" type="Marker2D" parent="positions"]
position = Vector2(1480, 451)

[node name="shiny" type="Marker2D" parent="positions"]
position = Vector2(1770, 451)

[node name="ori" type="Marker2D" parent="positions"]
position = Vector2(2013, 451)

[connection signal="body_entered" from="lilith_area" to="." method="_on_lilith_area_body_entered"]
[connection signal="body_entered" from="gary_area" to="." method="_on_gary_area_body_entered"]
[connection signal="body_entered" from="ina_area" to="." method="_on_ina_area_body_entered"]
[connection signal="body_entered" from="shiny_area" to="." method="_on_shiny_area_body_entered"]
[connection signal="body_entered" from="ori_area" to="." method="_on_ori_area_body_entered"]
[connection signal="timeout" from="dialog_timer" to="." method="_on_dialog_timer_timeout"]
